# service-impact

./: CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  SECURITY.md
.github/: release.yml
.github/ISSUE_TEMPLATE/: false-signal.yml  registry-question.yml  use-case.yml
.github/examples/: impact-check.yml
.github/workflows/: ci.yml  release-binaries.yml
docs/: LINKEDIN_POST.md  REAL_HISTORY_REPLAY.md  REAL_REPO_QUICKSTART.md  REPLAY_BENCHMARK.md  USE_CASES.md
examples/: basic.rs
examples/real-repo-starter/: changed_paths.txt  expected-impact.json  registry.json
fixtures/replay/: cases.json  service_impact_history_seed.json  summary.json
fixtures/sample/: registry.json
scripts/: render_demo_gif.py
src/: engine.rs  lib.rs  model.rs  pathing.rs  replay.rs  validate.rs
tests/: cli_smoke.rs
