[package]
name = "service-impact"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Manifest-driven service graph and impact analysis for changed files"
repository = "https://github.com/tac0de/service-impact"
homepage = "https://github.com/tac0de/service-impact"
documentation = "https://docs.rs/service-impact"
readme = "README.md"
keywords = ["ci", "monorepo", "dependency-graph", "impact-analysis", "devtools"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "service_impact"
path = "src/lib.rs"

[[bin]]
name = "service-impact"
path = "src/bin/service-impact.rs"

[[bin]]
name = "replay-bench"
path = "src/bin/replay-bench.rs"

[[bin]]
name = "git-history-export"
path = "src/bin/git-history-export.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
